<resources>
    <string name="gf_app_name">Google Feedback</string>
    <string name="gf_back">Back</string>
    <string name="gf_feedback">Feedback</string>
    <string name="gf_user_account">User Account</string>
    <string name="gf_anonymous">Anonymous</string>
    <string name="gf_choose_an_account">Choose an account</string>
    <string name="gf_report_feedback">Report An Issue</string>
    <string name="gf_screenshot_preview">Screenshot Preview</string>
    <string name="gf_preview">Preview</string>
    <string name="gf_send">Send</string>
    <string name="gf_preview_feedback">Preview feedback</string>
    <string name="gf_no_data">No data</string>
    <string name="gf_privacy">Privacy</string>
    <string name="gf_include_system_data">Include system data</string>
    <string name="gf_include_screenshot">Include screenshot</string>
    <string name="gf_this_will_help">Share system data with Google, to better diagnose the problem.</string>
    <string name="gf_this_will_help_screenshot">Send screenshot of the last page you were on.</string>
    <string name="gf_unknown_app">Unknown application</string>
    <string name="gf_report_being_sent">Thanks, your report is being sent.</string>
    <string name="gf_report_sent_failure">Sorry, there was an error sending your report.</string>
    <string name="gf_report_queued">Your device seems to be offline. We will retry when you are connected.</string>
    <string name="gf_optional_description">Description (optional)</string>
    <string name="gf_system_log">System Log</string>
    <string name="gf_sys_logs">System Logs</string>
    <string name="gf_privacy_policy">Privacy Policy</string>
    <string name="gf_privacy_text">By selecting [Send] you acknowledge and agree that any information contained in the feedback report will be used by Google in accordance with the Google privacy policies applicable to the application through which you initiated the report. You agree that Google may use any feedback that you provide to improve any Google products or services.</string>
    <string name="gf_build_view">Build Data</string>
    <string name="gf_network_data">Network</string>
    <string name="gf_network_name">Network Name</string>
    <string name="gf_error_report_system">System</string>
    <string name="gf_error_report_package_version">Package version</string>
    <string name="gf_error_report_package_version_name">Package version name</string>
    <string name="gf_error_report_package_name">Package name</string>
    <string name="gf_error_report_installer_package_name">Installed by</string>
    <string name="gf_error_report_process_name">Process name</string>
    <string name="gf_error_report_time">Time</string>
    <string name="gf_error_report_description">Description</string>
    <string name="gf_error_report_device">Device</string>
    <string name="gf_error_report_build_id">Build id</string>
    <string name="gf_error_report_build_type">Build type</string>
    <string name="gf_error_report_model">Model</string>
    <string name="gf_error_report_product">Product</string>
    <string name="gf_error_report_sdk_version">SDK version</string>
    <string name="gf_error_report_release">Release</string>
    <string name="gf_error_report_incremental">Incremental version</string>
    <string name="gf_error_report_codename">Codename</string>
    <string name="gf_error_report_board">Board</string>
    <string name="gf_error_report_brand">Brand</string>
    <string name="gf_error_report_user_accounts">Number of Google accounts</string>
    <string name="gf_error_report_installed_packages">Installed applications</string>
    <string name="gf_error_report_running_apps">Running applications</string>
    <string name="gf_error_report_system_log">System log</string>
    <string name="gf_error_report_system_app">System app</string>
    <string name="gf_error_report_running_service_details">Details</string>
    <string name="gf_should_submit_on_empty_description">You have not entered an issue description. Are you sure you want to send feedback without a description?</string>
    <string name="gf_should_submit_anonymously">You are submitting feedback anonymously. Your email address may help us debug your reported issue better. Are you sure you want to continue?</string>
    <string name="gf_yes">Yes</string>
    <string name="gf_no">No</string>
    <string name="gf_crash_header">Crash Data</string>
    <string name="gf_stack_trace">Stack Trace</string>
    <string name="gf_exception_class_name">Exception Class Name</string>
    <string name="gf_throw_file_name">Throw File Name</string>
    <string name="gf_throw_line_number">Throw Line Number</string>
    <string name="gf_throw_class_name">Throw Class Name</string>
    <string name="gf_throw_method_name">Throw Method Name</string>
    <string name="gf_exception_message">Exception Message</string>
    <string name="gf_receiver_transport_scheme">https</string>
    <string name="gf_receiver_host">www.google.com</string>
    <string name="gf_receiver_port" />
    <string name="gf_receiver_path">/tools/feedback/android/__submit</string>
    <string name="capturing_bugreport">Capturing bugreport</string>
    <string name="bugreport_captured">Bugreport captured</string>
    <string name="app_name">Glass Maps</string>
    <string name="guard_phrase_menu_item">ok glass,</string>
    <string name="voice_input_swipe_down_to_cancel">Swipe down to cancel</string>
    <string name="voice_input_no_match">"Didn't catch that"</string>
    <string name="voice_input_network_error">"Can't reach Google right now"</string>
    <string name="voice_input_server_error">"Can't reach Google right now"</string>
    <string name="voice_input_audio_error">"Didn't catch that"</string>
    <string name="voice_network_connectivity">No network connectivity</string>
    <string name="voice_search_no_answer">No answer for this search</string>
    <string name="voice_menu_item_read_aloud">read aloud</string>
    <string name="voice_menu_item_reply">reply…</string>
    <string name="voice_menu_item_share">share with…</string>
    <string name="voice_menu_item_answer_call">answer call</string>
    <string name="voice_menu_item_decline_call">decline call</string>
    <string name="voice_menu_item_play_video">play video</string>
    <string name="error_tap_speak_again">Tap to speak again</string>
    <string name="error_no_speech_detected">No speech detected</string>
    <string name="error_no_photo_share_targets">No photo sharing contacts found</string>
    <string name="error_no_video_share_targets">No video sharing contacts found</string>
    <string name="error_no_plus_share_targets">No Google+ sharing contacts found</string>
    <string name="provider_label_audio">Glass Audio</string>
    <string name="sound_search_prompt">Listening for music…</string>
    <string name="da_google_maps">Google Maps</string>
    <string name="da_destination_will_be_on_the_left">your destination will be on the left.</string>
    <string name="da_destination_will_be_on_the_right">your destination will be on the right.</string>
    <string name="da_you_will_reach_destination">you will arrive at your destination.</string>
    <string name="da_destination_on_the_left">Your destination is on the left.</string>
    <string name="da_destination_on_the_right">Your destination is on the right.</string>
    <string name="da_destination_reached">You have arrived.</string>
    <string name="da_speech_lost_gps">GPS signal lost</string>
    <string name="da_speech_lost_data_connection">Data connection lost</string>
    <string name="da_speech_navigation_resumed">Navigation resumed</string>
    <string name="da_speech_please_describe_problem">Please describe the problem</string>
    <string name="da_distance_format_mode">imperial</string>
    <string name="da_combined_maneuver">%1$s, then %2$s</string>
    <string name="da_prepare_event">%1$s, %2$s</string>
    <string name="da_speech_in_x_meters">In %1$s meters</string>
    <string name="da_speech_in_one_and_a_half_kilometers">In one and a half kilometers</string>
    <string name="da_speech_continue_for_x_meters">Continue for %1$s meters</string>
    <string name="da_speech_continue_for_one_and_a_half_kilometers">Continue for one and a half kilometers</string>
    <string name="da_speech_continue_on_road_for_x_meters">Continue on %2$s for %1$s meters</string>
    <string name="da_speech_continue_on_road_for_one_and_a_half_kilometers">Continue on %1$s for one and a half kilometers</string>
    <string name="da_speech_generic_continue">Continue straight</string>
    <string name="da_speech_in_x_feet">In %1$s feet</string>
    <string name="da_speech_in_x_yards">In %1$s yards</string>
    <string name="da_speech_in_a_quarter_mile">In a quarter mile</string>
    <string name="da_speech_in_a_half_mile">In a half mile</string>
    <string name="da_speech_in_three_quarters_of_a_mile">In three quarters of a mile</string>
    <string name="da_speech_in_one_and_a_half_miles">In one and a half miles</string>
    <string name="da_speech_continue_for_x_feet">Continue for %1$s feet</string>
    <string name="da_speech_continue_for_x_yards">Continue for %1$s yards</string>
    <string name="da_speech_continue_for_a_quarter_mile">Continue for a quarter mile</string>
    <string name="da_speech_continue_for_a_half_mile">Continue for a half mile</string>
    <string name="da_speech_continue_for_three_quarters_of_a_mile">Continue for three quarters of a mile</string>
    <string name="da_speech_continue_for_one_and_a_half_miles">Continue for one and a half miles</string>
    <string name="da_speech_continue_on_road_for_x_feet">Continue on %2$s for %1$s feet</string>
    <string name="da_speech_continue_on_road_for_x_yards">Continue on %2$s for %1$s yards</string>
    <string name="da_speech_continue_on_road_for_a_quarter_mile">Continue on %1$s for a quarter mile</string>
    <string name="da_speech_continue_on_road_for_a_half_mile">Continue on %1$s for a half mile</string>
    <string name="da_speech_continue_on_road_for_three_quarters_of_a_mile">Continue on %1$s for three quarters of a mile</string>
    <string name="da_speech_continue_on_road_for_one_and_a_half_miles">Continue on %1$s for one and a half miles</string>
    <string name="da_route_prefixes">N,NE,E,SE,S,SW,W,NW</string>
    <string name="da_route_suffixes">N,NE,E,SE,S,SW,W,NW,Ave,Blvd,Byp,Cir,Ct,Dr,Expy,Fwy,Hwy,Ln,Pkwy,Pl,Rd,St,Thrwy,Way</string>
    <string name="da_navigate_to">Navigate to</string>
    <string name="da_return_to">Return to</string>
    <string name="da_route_includes_tolls">Route includes tolls</string>
    <string name="da_direction_north">north</string>
    <string name="da_direction_north_west">northwest</string>
    <string name="da_direction_west">west</string>
    <string name="da_direction_south_west">southwest</string>
    <string name="da_direction_south">south</string>
    <string name="da_direction_south_east">southeast</string>
    <string name="da_direction_east">east</string>
    <string name="da_direction_north_east">northeast</string>
    <string name="da_step_depart">Head %1$s</string>
    <string name="da_step_depart_on">Head %1$s on %2$s</string>
    <string name="da_step_slight_left">Slight left</string>
    <string name="da_step_slight_right">Slight right</string>
    <string name="da_step_turn_left">Turn left</string>
    <string name="da_step_turn_right">Turn right</string>
    <string name="menu_show_steps">Step by step</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_show_route">Show route</string>
    <string name="menu_change_route">Change route</string>
    <string name="menu_bike">Bike</string>
    <string name="menu_drive">Drive</string>
    <string name="menu_transit">Transit</string>
    <string name="menu_walk">Walk</string>
    <string name="menu_call_agency">Call agency</string>
    <string name="menu_agency_website">Agency website</string>
</resources>