<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/gf_app_header" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/gf_PageHeader">
        <ImageView android:id="@id/gf_app_icon" android:layout_width="@*android:dimen/app_icon_size" android:layout_height="@*android:dimen/app_icon_size" android:src="@drawable/gf_icon" />
        <LinearLayout android:orientation="vertical" android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_weight="1.0">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:textColor="?android:textColorPrimaryDisableOnly" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gf_report_feedback" android:shadowColor="@color/gf_shadow" android:shadowRadius="2.0" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorPrimaryDisableOnly" android:ellipsize="middle" android:id="@id/gf_app_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gf_app_name" android:singleLine="true" android:shadowColor="@color/gf_shadow" android:shadowRadius="2.0" />
        </LinearLayout>
    </LinearLayout>
    <ImageView android:background="@color/gf_header_background" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/gf_Separator" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0px" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/gf_feedback_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/gf_feedback" style="@style/gf_SectionHeader" />
            <EditText android:gravity="top" android:id="@id/gf_feedback" android:padding="10.0dip" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="130.0dip" android:layout_margin="@dimen/gf_list_item_padding" android:hint="@string/gf_optional_description" android:singleLine="false" android:capitalize="sentences" android:autoText="true" />
            <TextView android:id="@id/gf_privacy" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/gf_privacy" style="@style/gf_SectionHeader" />
            <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="0" android:shrinkColumns="0">
                <TableRow android:id="@id/gf_system_logs_option" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/gf_padding">
                        <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gf_include_system_data" />
                        <TextView android:textAppearance="?android:textAppearanceSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gf_this_will_help" />
                    </LinearLayout>
                    <CheckBox android:gravity="left" android:layout_gravity="clip_horizontal" android:id="@id/gf_send_system_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/gf_padding" android:layout_marginRight="@dimen/gf_twice_padding" android:checked="true" android:contentDescription="@string/gf_include_system_data" />
                </TableRow>
                <TableRow android:id="@id/gf_screenshot_option" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/gf_padding">
                        <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gf_include_screenshot" />
                        <TextView android:textAppearance="?android:textAppearanceSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gf_this_will_help_screenshot" />
                    </LinearLayout>
                    <CheckBox android:gravity="left" android:layout_gravity="clip_horizontal" android:id="@id/gf_send_screenshot" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/gf_padding" android:layout_marginRight="@dimen/gf_twice_padding" android:checked="true" android:contentDescription="@string/gf_include_screenshot" />
                </TableRow>
            </TableLayout>
            <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_gravity="left" android:id="@id/gf_privacy_option" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/gf_padding" android:layout_marginRight="@dimen/gf_twice_padding" android:layout_marginBottom="@dimen/gf_padding" android:text="@string/gf_privacy_policy" android:drawableRight="@drawable/gf_expand" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/gf_user_account" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/gf_user_account" style="@style/gf_SectionHeader" />
                <Spinner android:id="@id/gf_account_spinner" android:paddingRight="@dimen/gf_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:prompt="@string/gf_choose_an_account" android:contentDescription="@string/gf_choose_an_account" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" style="@android:style/ButtonBar">
        <Button android:id="@id/gf_preview" android:layout_width="0.0px" android:layout_height="wrap_content" android:text="@string/gf_preview" android:layout_weight="1.0" />
        <Button android:id="@id/gf_send" android:layout_width="0.0px" android:layout_height="wrap_content" android:text="@string/gf_send" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>